--- a/css/main.css
+++ b/css/main.css
@@ -27,20 +27,31 @@ ul {
 
 ul p {
   text-align: left;
+  padding: 1rem 0;
+  margin: 0;
 }
 
 h1 {
   font-size: 2rem;
   font-weight: normal;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 h2 {
   font-size: 1.5rem;
+  margin: 0;
 }
 
 h3 a {
   border: 2px solid #fff;
+}
+
+a {
+  color: #fff;
+  font-size: 1.125rem;
+  text-decoration: none;
+  font-weight: normal;
+  padding: 1rem;
 }
 
 svg {
@@ -60,11 +71,15 @@ li {
 }
 
 
-@media only screen and (min-width: @38em) {
+@media only screen and (min-width: 38em) {
 
   section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  h3 a:hover {
+    color: #ff5e3a;
   }
 
 }
