--- a/css/main.css
+++ b/css/main.css
@@ -27,19 +27,19 @@ ul {
 
 ul p {
   text-align: left;
-  padding: 1rem 0;
+  padding-bottom: 1rem;
   margin: 0;
 }
 
 h1 {
   font-size: 2rem;
-  font-weight: normal;
+  font-weight: bold;
   margin: 0;
 }
 
 h2 {
   font-size: 1.5rem;
-  margin: 0;
+  margin: 1rem 0;
 }
 
 h3 a {
@@ -57,19 +57,18 @@ a {
 svg {
   width: 8rem;
   height: 8rem;
-  fill: rgba(255, 255, 255, .7);
+  fill: currentColor;
 }
 
 section {
   display: flex;
   flex-direction: column;
-  margin: 1.5rem;
+  margin: 1rem;
 }
 
 li {
   list-style-type: none;
 }
-
 
 @media only screen and (min-width: 38em) {
 
