--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,8 @@ html {
   font-family: Overpass, sans-serif;
   line-height: 1.5;
   background-color: #ff9500;
-  background-image: linear-gradient(to bottom, #ff9500, #ff5e3a);
   color: #fff;
+  background-image: linear-gradient(to bottom, #ff9500, #ff5e3a);
 }
 
 *, *::before, *::after {
@@ -46,10 +46,11 @@ ul p {
   text-align: left;
   margin: 0  0 1rem;
   font-size: 1.125rem;
+  font-weight: normal;
 }
 
 h3 a {
-  border: 2px solid #fff;
+  border: .2rem solid rgba(255, 255, 255, .7);
   margin: 1rem 0;
   padding: 1rem;
 }
@@ -75,16 +76,44 @@ li {
 
 @media only screen and (min-width: 38em) {
 
+  section {
+    padding: 4vmin 4vmin 0;
+  }
+
+  h1 {
+    text-align: center;
+    margin-bottom: 2vmin;
+  }
+
   ul {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
+    grid-gap: 4vmin;
+  }
+
+  ul p {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  li {
+    display: grid;
+    align-self: stretch;
+  }
+
+  h2 {
     text-align: left;
   }
 
+  h3 {
+    margin-bottom: 2vmin;
+  }
+
   h3 a {
-    display: flex;
-    padding: .5rem;
+    display: inline-flex;
+    padding: 1rem;
+    text-align: left;
   }
 
   h3 a:hover {
