--- a/css/main.css
+++ b/css/main.css
@@ -77,12 +77,12 @@ li {
 @media only screen and (min-width: 38em) {
 
   section {
-    padding: 4vmin 4vmin 0;
+    padding: 3vmin 3vmin 0;
   }
 
   h1 {
     text-align: center;
-    margin-bottom: 2vmin;
+    margin: 4vmin 0;
   }
 
   ul {
